--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -96,12 +96,7 @@ div.rdf {
 .rdf.predicate {
   vertical-align: top;
   padding: 1px 0px 1px 12px;
-  /*background-image: url('../images/link-line.png');*/
-/*  background-repeat: no-repeat;
-  background-position: 0 -5px;
-  margin-left: -10px;
-  margin-right: 0;
-*/}
+}
 
 .rdf.object {
   padding: 0px 0px 0px 18px;
@@ -113,40 +108,14 @@ div.rdf {
 
 .rdf.object.first {
   margin-left: -4px;
-  /*background-image: url('../images/link-arrow.png');*/
-  background-repeat: no-repeat;
-  background-position: 0 7px;
-}
-
-.rdf.object.multiple {
-  margin-left: -4px;
-  /*background-image: url('../images/link-line3.png');*/
-  background-repeat: no-repeat;
-  background-position: 0 9px;
 }
 
 .multiple > li > .rdf.object {
   vertical-align: top;
-  padding: 1px 0px 1px 18px;
-  /*background-image: url('../images/link-line-arrow.png');*/
-  background-repeat: no-repeat;
-  background-position: 0px -6px;
-  margin-left: -10px;
-  margin-right: 0;
+  padding: 1px 0px 1px 5px;
 }
-
-.multiple > li.first > .rdf.object {
-  background-position: 0 7px;
-  /*background-image: url('../images/link-line2.png');*/
-}
-
 
 .rdf.predicate a, .rdf.predicate a:visited {
-  /*border: 1px solid #a0a0a0;*/
-  /*border-radius: 3px;*/
-  /*background-color: #f5f5f8;*/
-  /*color: #303030;*/
-  /*padding: 2px 5px;*/
   text-align: right;
 }
 
@@ -164,26 +133,6 @@ div.rdf {
 
 ul.resource-properties {
   margin-bottom: 0;
-}
-
-ul.resource-properties li {
-/*  border-left: 2px solid rgba( 160, 160, 160, 20 );
-  padding-left: 8px;
-  margin-left: 0px;
-*/}
-
-ul.resource-properties li.last {
-  border-left: 0;
-  padding-left: 11px;
-}
-
-ul.multiple li.first :after {
-  position: absolute;
-  height: 20px;
-  width: 2px;
-  left: -1px;
-  top: 0;
-  background-color:  red  ;
 }
 
 /* nested resources */
@@ -210,5 +159,19 @@ ul.multiple li.first :after {
 
 .rdf.resource.nested .rdf.object {
   margin-left: -5px;
+}
+
+
+/* Literal lists */
+
+.literal li.literal {
+  display: inline-block;
+  content: ", ";
+}
+
+.literal li.literal + li.literal::before {
+  padding: 0;
+  margin: 0;
+  content: ", ";
 }
 
