--- a/elda-assets/src/main/webapp/velocity/partials/item-setup.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/item-setup.vm
@@ -1,5 +1,6 @@
 ## Set up the page to display either an item endpoint or a list endpoint
 #parse( "macros/item.vm" )
+#parse( "partials/filter-actions.vm" )
 <container>
   #if( $page.isItemEndpoint() )
     #parse( "partials/item-endpoint.vm" )
