--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -127,6 +127,11 @@ div.rdf {
   padding-bottom: 6px;
 }
 
+.property-value-row {
+  padding: 2px 0;
+  min-height: 25px;
+}
+
 .property-value-row.odd  {
   background-color: #f5f5f9;
 }
@@ -175,3 +180,12 @@ ul.resource-properties {
   content: ", ";
 }
 
+
+/* Filter and sort actions */
+.filter-actions {
+  margin-left: 25px;
+}
+
+.filter-actions button {
+  color: #5c6bc0;
+}
