Added ability to pop-over a list of related links

--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -189,3 +189,9 @@ ul.resource-properties {
 .filter-actions button {
   color: #5c6bc0;
 }
+
+/* Popovers */
+.popover h3 {
+  background-color: #c5cae9;
+  border: 0;
+}
