--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -129,7 +129,19 @@ div.rdf {
 }
 
 .property-value-row.odd  {
-  background-color: #f5f5f9;
+  /*background-color: #f5f5f9;*/
+}
+
+.property-value-row + .property-value-row {
+  border-top: 1px solid #e8eaf6;
+}
+
+.property-value-row.literal + .property-value-row.resource {
+  border-top: 2px dotted #c5cae9;
+}
+
+ul.resource-properties.extensions {
+  border-bottom: 2px dotted #c5cae9;
 }
 
 ul.resource-properties {
@@ -194,4 +206,16 @@ ul.resource-properties {
 
 .popover i.fa-minus-circle {
   color: #f57c00;
+}
+
+/* Item extensions */
+
+.item-extension {
+  min-height: 100px;
+  height: 100px;
+  margin: 10px;
+}
+
+.item-extension .olMap {
+  height: 100px;
 }
