--- a/elda-assets/src/main/webapp/velocity/macros/item-extensions.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item-extensions.vm
@@ -3,27 +3,59 @@
 ## partials/content-detection.vm called from index.vm
 
 #macro( itemVisualExtension $resource )
-  #itemMap( $resource )
+  #if( $mapDisplay && $item.hasAllProperties( $latLongProps ))
+    #itemMap( $resource )
+  #end
 #end
 
 #macro( itemMap $resource )
-  #if( $mapDisplay && $item.hasAllProperties( $latLongProps ))
-    #set( $geoTriples = $item.extractByPredicate( $geoProps ) )
-    <div class="col-md-8">
-      <ul class="resource-properties extensions">
-        #renderProperties( $geoTriples, 6, 6 )
-      </ul>
+  #set( $geoTriples = $item.extractByPredicate( $geoProps ) )
+  <div class="col-md-8">
+    <ul class="resource-properties extensions">
+      #renderProperties( $geoTriples, 6, 6 )
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <div class="item-extension map">
+      #set( $mapId = "map-" + $item.rdfNode().shortUniqueID() )
+      #set( $long = $geoTriples.get( 0 ).rdfNode().getLexicalForm() )
+      #set( $lat  = $geoTriples.get( 1 ).rdfNode().getLexicalForm() )
+      <div id="$mapId"></div>
+      <script>
+        EldaMaps.addSmallMap( "$mapId", $long, $lat, {w:16, h:16, image: "$assets/images/target.png"} );
+      </script>
     </div>
-    <div class="col-md-4">
-      <div class="item-extension map">
-        #set( $mapId = "map-" + $item.rdfNode().shortUniqueID() )
-        #set( $long = $geoTriples.get( 0 ).rdfNode().getLexicalForm() )
-        #set( $lat  = $geoTriples.get( 1 ).rdfNode().getLexicalForm() )
-        <div id="$mapId"></div>
+  </div>
+#end
+
+## Hook for showing additional visual presentations based on content. Default
+## behaviours:
+## * if at least some items have locations, show a map for the whole results group
+#macro( groupVisualExtensions $hierarchy )
+  #if( $mapDisplay)
+    #groupMap( $hierarchy )
+  #end
+#end
+
+## Show a map for a group of results
+#macro( groupMap $hierarchy )
+  <section>
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="resource-label">Locations of results</h1>
+      </div>
+      <div class="col-md-12">
+        <div id="resultsMap"></div>
         <script>
-          EldaMaps.addSmallMap( "$mapId", $long, $lat, {w:16, h:16, image: "$assets/images/target.png"} );
+          var locations = [];
+          #foreach( $item in $hierarchy.roots())
+            locations.push( {lon: $item.rdfNode().getPropertyValue( "geo:long" ).getLexicalForm(),
+                             lat: $item.rdfNode().getPropertyValue( "geo:lat" ).getLexicalForm(),
+                             label: "$item.rdfNode().getName()"} );
+          #end
+          EldaMaps.addLargeMap( "resultsMap", locations, {w:16, h:16, image: "$assets/images/target.png"} );
         </script>
       </div>
     </div>
-  #end
+  </section>
 #end
