Fix alignment of property lists in nested resources

--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -23,7 +23,9 @@
       #itemName( $resource, "h3", "", $hnode )
       #itemURI( $resource, "h4" )
       #itemTypes( $resource )
-      #itemProperties( $hnode, $level )
+      <div class="row">
+        #itemProperties( $hnode, $level )
+      </div>
     </$elem>
   #end
 #end
