--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -23,6 +23,7 @@
       #itemName( $resource, "h3", "", $hnode )
       #itemURI( $resource, "h4" )
       #itemTypes( $resource )
+      #itemVisualExtension( $resource )
       <div class="row">
         #itemProperties( $hnode, $level )
       </div>
