--- a/elda-assets/src/main/webapp/velocity/partials/content-detection.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/content-detection.vm
@@ -1,4 +1,5 @@
 ## Set variables based on contents of the display resources
-#if( $page.itemHasAllProperties( $latLongProps ))
+#set( $latLongResources = $page.resourcesWithAllProperties( $latLongProps ))
+#if( $latLongResources.size() > 0 )
   #set( $mapDisplay = true )
 #end
