--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -14,7 +14,7 @@
         #itemName( $resource, "h1", "col-md-12" )
         #itemURI( $resource, "h2", "col-md-12" )
         #itemTypes( $resource, "col-md-12" )
-        #itemVisualExtension( $resource )
+        #itemVisualExtension( $hnode )
         #itemProperties( $hnode, $level )
       </div>
     </$elem>
@@ -23,7 +23,7 @@
       #itemName( $resource, "h3", "", $hnode )
       #itemURI( $resource, "h4" )
       #itemTypes( $resource )
-      #itemVisualExtension( $resource )
+      #itemVisualExtension( $hnode )
       <div class="row">
         #itemProperties( $hnode, $level )
       </div>
