--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -61,7 +61,11 @@ h2.resource-uri, h4.resource-uri, .resource-types {
   content: ", ";
 }
 
-h2.resource-uri a, h2.resource-uri a:visited {
+h2.resource-uri a,
+h2.resource-uri a:visited,
+h4.resource-uri a,
+h4.resource-uri a:visited
+{
   color: #666;
 }
 
@@ -153,7 +157,7 @@ ul.resource-properties {
 /* nested resources */
 .nested {
   display: inline-block;
-  border: 1px solid #283593;
+  border: 1px solid #3f51b5;
   border-radius: 4px;
   margin: 4px 0;
   max-width: 100%;
@@ -169,13 +173,9 @@ ul.resource-properties {
   font-size: 10pt;
   margin: 0;
   color: white;
-  background-color: #283593;
+  background-color: #3f51b5;
   padding: 3px;
   border-radius: 3px;
-}
-
-.nested h4 a, .nested h4 a:visited {
-  color: #101010;
 }
 
 .rdf.resource.nested .rdf.object {
