--- a/elda-assets/src/main/webapp/velocity/partials/qonsole-head.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/qonsole-head.vm
@@ -5,7 +5,7 @@ $(function(){
     // configuration
     var config = {
       endpoints: {
-        "default": $pageMetadata.selectionQuery().queryEndpoint(),
+        "default": "$pageMetadata.selectionQuery().queryEndpoint()",
       },
       prefixes: {
         "bw":       "http://environment.data.gov.uk/def/bathing-water/",
@@ -21,10 +21,10 @@ $(function(){
       },
       queries: [
         { "name": "Item selection query",
-          "query": $pageMetadata.selectionQuery().queryText()
+          "query": "$esc.escapeJava( $pageMetadata.selectionQuery().queryText() )"
         },
         { "name": "Item description query",
-          "query": $pageMetadata.viewingQuery().queryText()
+          "query": "$esc.escapeJava( $pageMetadata.viewingQuery().queryText() )"
         }
       ]
     };
