--- a/elda-assets/src/main/webapp/velocity/partials/global-constants.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/global-constants.vm
@@ -1,6 +1,10 @@
 ## The location of the static assets, which by default is given by the velocity root
 ## under the webapp root
-#set( $assets = $_APP.spelling() + "/" + $_velocityRoot.spelling() )
+#if( $_resourceRoot )
+  #set( $assets = $_resourceRoot )
+#else
+  #set( $assets = $_APP.spelling() + "/" + $_velocityRoot.spelling() )
+#end
 
 ## Images are located in the assets folder
 #set( $images = $assets + "/images" )
