--- a/elda-assets/src/main/webapp/velocity/partials/global-constants.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/global-constants.vm
@@ -1,7 +1,7 @@
 ## The location of the static assets, which by default is given by the velocity root
 ## under the webapp root
 #if( $_resourceRoot )
-  #set( $assets = $_resourceRoot )
+  #set( $assets = $_resourceRoot.spelling() + "velocity" )
 #else
   #set( $assets = $_APP.spelling() + "/" + $_velocityRoot.spelling() )
 #end
