--- a/elda-assets/src/main/webapp/velocity/partials/qonsole.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/qonsole.vm
@@ -72,7 +72,7 @@
                 <div class="row">
                   <div class="col-md-12">
                     <span class="loadingSpinner hidden">
-                      <img src="assets/velocity/images/wait30.gif" alt="waiting for server action to complete" />
+                      <img src="${assets}/images/wait30.gif" alt="waiting for server action to complete" />
                     </span>
                     <span class="timeTaken hidden"></span>
                   </div>
