Removed redundant JavaScript references

--- a/elda-assets/src/main/webapp/velocity/partials/javascript-dependencies.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/javascript-dependencies.vm
@@ -71,7 +71,8 @@ require( ['require'],
        'jquery',
        'sprintf',
        'bootstrap',
-       'app/qonsole'
+       'app/qonsole',
+       'app/popover'
        #if( $mapDisplay )
          , 'app/maps'
        #end
