Fixed problem with initialising jquery.dataTables (had to use same name in requireJS config as the given module name in jquery.dataTables.min.js). Also added jsHint checking to application JS code.

--- a/elda-assets/src/main/webapp/velocity/partials/javascript-dependencies.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/javascript-dependencies.vm
@@ -6,7 +6,8 @@ require.config({
     'bootstrap':            'bootstrap.min',
     'jquery':               'jquery-1.11.0.min',
     'sprintf':              'sprintf-0.7-beta1',
-    'modernizr':            'modernizr-2.6.2-respond-1.1.0.min'
+    'modernizr':            'modernizr-2.6.2-respond-1.1.0.min',
+    'datatables':    'jquery.dataTables.min'
   },
   shim: {
     'underscore': {
@@ -21,8 +22,9 @@ require.config({
     'jquery.xdomainrequest': {
       deps: ['jquery']
     },
-    'jquery.dataTables.min': {
-      deps: ['jquery']
+    'datatables': {
+      deps: ['jquery'],
+      exports: 'DataTable'
     },
     'qonsole': {
       deps: ['jquery.dataTables.min',
@@ -72,7 +74,8 @@ require( ['require'],
        'sprintf',
        'bootstrap',
        'app/qonsole',
-       'app/popover'
+       'datatables',
+       'app/popover',
        #if( $mapDisplay )
          , 'app/maps'
        #end
