Fix for issue #84 - escape literals before interpolating into HTML presentation

--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -169,7 +169,7 @@
 ## Show a literal-value
 #macro( propertyObjectLiteral $lit )
   <div class="rdf object literal">
-    $lit.getLexicalForm()
+    $esc.escapeHtml( $lit.getLexicalForm() )
   </div>
 #end
 
