Additional fix for issue #84: do not show filter affordance for XML literals

--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -187,14 +187,16 @@
 
 ## Show the actions menu for this value
 #macro( actionsMenu $node )
-  <span class="filter-actions">
-    <button type="button"
-            class="btn btn-xs btn-default popover-dismiss"
-            title="change this view:"
-            data-placement="auto left"
-            data-html="true"
-            data-content="$node.relatedLinksHTML()">
-      <i class="fa fa-bars"></i>
-    </button>
-  </span>
+  #if( ! $node.rdfNode().isXmlLiteral() )
+    <span class="filter-actions">
+      <button type="button"
+              class="btn btn-xs btn-default popover-dismiss"
+              title="change this view:"
+              data-placement="auto left"
+              data-html="true"
+              data-content="$node.relatedLinksHTML()">
+        <i class="fa fa-bars"></i>
+      </button>
+    </span>
+  #end
 #end
