--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -34,7 +34,7 @@
     <div class="container">
       #parse( "partials/item-setup.vm")
 
-      #parse( "partials/debug-context.vm" )
+      ##parse( "partials/debug-context.vm" )
 
       #parse( "partials/qonsole.vm" )
 
